--- a/.github/workflows/dev-full-stack-cloudflare.yml
+++ b/.github/workflows/dev-full-stack-cloudflare.yml
@@ -17,7 +17,7 @@ env:
   stackLocation: 'eastus'
   stackLocationCode: 'cus1'
   AppName: 'resume'
-  AppBackendName: 'resumecounter'
+  AppBackendName: 'resumectr'
   tagCostCenter: 'azCF'
   rgDns: 'glbl-ryanmcveyme-v1-rg'
 
