--- a/.github/workflows/dev-full-stack-azureCDN.yml
+++ b/.github/workflows/dev-full-stack-azureCDN.yml
@@ -32,7 +32,7 @@ jobs:
       backendApp: ${{ steps.filter.outputs.backendApp }}
       frontendSite: ${{ steps.filter.outputs.frontendSite }}
     steps:
-    - uses: actions/checkout@develop
+    - uses: actions/checkout@main
     # For pull requests it's not necessary to checkout the code
     - uses: dorny/paths-filter@v2
       id: filter
@@ -47,7 +47,7 @@ jobs:
 
   deployDevelopmentIac:
     needs: changes
-    if: ${{ needs.changes.outputs.iac == 'true' }}
+    # if: ${{ needs.changes.outputs.iac == 'true' }}
     name: Deploy IaC to development
     environment:
       name: development
@@ -231,7 +231,7 @@ jobs:
   buildDeployDevelopmentFrontend:
     # needs: buildDeployDevelopmentBackend
     needs: [changes, buildDeployDevelopmentBackend]
-    if: ${{ needs.changes.outputs.frontendSite == 'true' }}
+    # if: ${{ needs.changes.outputs.frontendSite == 'true' }}
     name: Deploy Frontend Static App to Development
     environment:
       name: development
