develop to main - diable all stage if: change checks (#7)
* see how this goes

* see how this goes again

* fix workflow paths

* paths again

* what is going on

* comment out ignore paths

* fix template path

* correct yml parameters

* fix yml parameters format

* eastus parameter without space

* no spaces allowed for yml arm parameters

* no spaces allowed for yml arm parameters

* ughhh param again

* add tag for runId

* add tag for runId

* test echo runId

* why error on line 58

* why....

* that do it

* try github.run.id

* try github.run_id

* github.run_id worked, now does it tag with param

* add git action run number and attempt

* pesky T :)

* echo run link

* add actionsLink step and tag

* workflow input stackLocation, see what happens

* try that, stackLocation input parameter with ''

* move inputs to workflow_run

* try workflow_call

* try it as env

* env variable try this

* getting frustrated

* more env variables for app name

* us2 west v4

* cosmos try 1

* cosmos module try 2

* yml function app try 1

* yml function try 2

* yml function app try 3

* yml function try 4

* yuck, try 5

* remove function extension variable

* kv with cosmos secret and SCMI, try1

* kv with cosmos secret and SCMI, try2

* try full backend again

* why why why

* why why why

* use cosmos module cosmos.name

* cosmos string as var instead

* remove var due to syntax error

* move cosmos secrets create to functionapp mod

* v2 worked v3 full run backend

* add keyvault dependson v4

* move fa appsetting to new resource

* v6 all the appsettings maybe, F

* move all appsettings

* correct website_contentshare appsetting

* contentshare name fix, maybe

* remove function from iac, maybe app yml will do it

* try the full thing again v2

* frontend try 1 with static site enabled

* simplify and fix dns related env variables

* cdn fir

--- a/.github/workflows/dev-full-stack-azureCDN.yml
+++ b/.github/workflows/dev-full-stack-azureCDN.yml
@@ -47,7 +47,7 @@ jobs:
 
   deployDevelopmentIac:
     needs: changes
-    if: ${{ needs.changes.outputs.iac == 'true' }}
+    # if: ${{ needs.changes.outputs.iac == 'true' }}
     name: Deploy IaC to development
     environment:
       name: development
@@ -231,7 +231,7 @@ jobs:
   buildDeployDevelopmentFrontend:
     # needs: buildDeployDevelopmentBackend
     needs: [changes, buildDeployDevelopmentBackend]
-    if: ${{ needs.changes.outputs.frontendSite == 'true' }}
+    # if: ${{ needs.changes.outputs.frontendSite == 'true' }}
     name: Deploy Frontend Static App to Development
     environment:
       name: development
