prod v20 cloudflare configure

--- a/.github/workflows/prod-full-stack-azureCDN.yml
+++ b/.github/workflows/prod-full-stack-azureCDN.yml
@@ -3,7 +3,7 @@ name: Production Full Stack Azure CDN
 on:
   push:
     branches:
-    - main
+    - disabled
     paths:
     - '.github/workflows/prod-full-stack-azureCDN.yml'
     - '.iac/**'
