prod v20 cloudflare config try again

--- a/.github/workflows/prod-full-stack-cloudflare.yml
+++ b/.github/workflows/prod-full-stack-cloudflare.yml
@@ -249,7 +249,7 @@ jobs:
 
 
   buildDeployProductionFrontend:
-    # needs: buildDeployProductionBackend
+    needs: changes
     # needs: [changes, buildDeployProductionBackend]
     if: ${{ needs.changes.outputs.frontendSite == 'true' }}
     name: Deploy Frontend Static App to Production
