prod v1 cloudflare .me

--- a/.github/workflows/dev-full-stack-cloudflare.yml
+++ b/.github/workflows/dev-full-stack-cloudflare.yml
@@ -11,8 +11,8 @@ on:
     - 'frontend/**'
 
 env: 
-  dnsZone: 'ryanmcvey.net'
-  stackVersion: 'v20'
+  dnsZone: 'ryanmcvey.me'
+  stackVersion: 'v1'
   stackEnvironment: 'dev'
   stackLocation: 'eastus'
   stackLocationCode: 'cus1'
