--- a/.github/workflows/dev-full-stack-cloudflare.yml
+++ b/.github/workflows/dev-full-stack-cloudflare.yml
@@ -12,6 +12,8 @@ on:
 
 env: 
   dnsZone: 'ryanmcvey.me'
+  dnsZone2: 'ryanmcvey.net'
+  dnsZone3: 'ryanmcvey.cloud'
   stackVersion: 'v1'
   stackEnvironment: 'dev'
   stackLocation: 'eastus'
@@ -117,6 +119,8 @@ jobs:
                   functionAppKeySecretNamePrimary=AzureResumeConnectionStringPrimary
                   functionAppKeySecretNameSecondary=AzureResumeConnectionStringSecondary
                   corsFriendlyDnsUri=https://${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone}}
+                  corsFriendlyDnsUri2=https://${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone2}}
+                  corsFriendlyDnsUri3=https://${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone3}}
                   corsCdnUri=https://${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-cdn.azureedge.net
                   functionRuntime=dotnet
                   keyVaultName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-kv
@@ -142,8 +146,11 @@ jobs:
                   resourceGroupLocation=${{env.stackLocation}}
                   rgFrontendName=${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg
                   staticSiteStorageAccountName=${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa
+                  staticSiteStorageAccountName2=${{env.stackLocationCode}}${{env.AppName}}2${{env.stackEnvironment}}${{env.stackVersion}}sa
+                  staticSiteStorageAccountName3=${{env.stackLocationCode}}${{env.AppName}}3${{env.stackEnvironment}}${{env.stackVersion}}sa
                   staticSiteStorageAccountAppInsightsName=${{env.stackLocationCode}}-${{env.AppName}}-${{env.stackEnvironment}}-${{env.stackVersion}}-ai
     
+    ### static site #1 - Begin
     - name: Enable Storage Account Frontend Static Website
       uses: azure/CLI@v1
       with:
@@ -193,16 +200,132 @@ jobs:
         proxied: false
         token: ${{ secrets.CLOUDFLARE_TOKEN }}
         zone: ${{ secrets.CLOUDFLARE_ZONE }}
+    ### static site #1 - End
+    ### static site #2 - Begin
+    - name: Enable Storage Account Frontend Static Website2
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+            az storage blob service-properties update --account-name ${{env.stackLocationCode}}${{env.AppName}}2${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode login --static-website --404-document error.html --index-document index.html
+                
+    - name: Get Static Site Endpoint2
+      id: staticSiteEndPoint2
+      run: |
+        ssEndPoint2=$(az storage account show --name ${{env.stackLocationCode}}${{env.AppName}}2${{env.stackEnvironment}}${{env.stackVersion}}sa --resource-group ${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg --query "primaryEndpoints.web" --output tsv)
+        echo "::set-output name=ssEndPoint2::${ssEndPoint2}"
+  
+    - name: Echo Static Site Endpoint2
+      run: echo "${{ steps.staticSiteEndPoint2.outputs.ssEndPoint2 }}"
+   
+    - name: Convert Enpoint URL to Domain2
+      id: convert_url_domain2
+      run: |
+          export ssEndpoint_url2=$(echo ${{ steps.staticSiteEndPoint2.outputs.ssEndPoint2 }} |  awk -F[/:] '{print $4}')
+          echo ::set-output name=ssEndpoint_domain2::$ssEndpoint_url2
 
+    - name: Echo Static Site Endpoint Domain2
+      run: echo "${{ steps.convert_url_domain2.outputs.ssEndpoint_domain2 }}"
+   
+
+    - name: Cloudflare - Frontend DNS 2
+      continue-on-error: true
+      uses: rez0n/create-dns-record@v2.2
+      with:
+        type: "CNAME"
+        name: ${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}
+        content: ${{ steps.convert_url_domain2.outputs.ssEndpoint_domain2 }}
+        ttl: 1
+        proxied: true
+        token: ${{ secrets.CLOUDFLARE_TOKEN }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE2 }}
+
+    
+    - name: Cloudflare - Frontend DNS Verify 2
+      continue-on-error: true
+      uses: rez0n/create-dns-record@v2.2
+      with:
+        type: "CNAME"
+        name: asverify.${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}
+        content: asverify.${{ steps.convert_url_domain2.outputs.ssEndpoint_domain2 }}
+        ttl: 1
+        proxied: false
+        token: ${{ secrets.CLOUDFLARE_TOKEN }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE2 }}
+    ### static site #2 - End
+    ### static site #3 - Begin
+    - name: Enable Storage Account Frontend Static Website3
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+            az storage blob service-properties update --account-name ${{env.stackLocationCode}}${{env.AppName}}3${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode login --static-website --404-document error.html --index-document index.html
+                
+    - name: Get Static Site Endpoint3
+      id: staticSiteEndPoint3
+      run: |
+        ssEndPoint3=$(az storage account show --name ${{env.stackLocationCode}}${{env.AppName}}3${{env.stackEnvironment}}${{env.stackVersion}}sa --resource-group ${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg --query "primaryEndpoints.web" --output tsv)
+        echo "::set-output name=ssEndPoint3::${ssEndPoint3}"
+  
+    - name: Echo Static Site Endpoint3
+      run: echo "${{ steps.staticSiteEndPoint3.outputs.ssEndPoint3 }}"
+   
+    - name: Convert Enpoint URL to Domain3
+      id: convert_url_domain3
+      run: |
+          export ssEndpoint_url3=$(echo ${{ steps.staticSiteEndPoint3.outputs.ssEndPoint3 }} |  awk -F[/:] '{print $4}')
+          echo ::set-output name=ssEndpoint_domain3::$ssEndpoint_url3
+
+    - name: Echo Static Site Endpoint Domain3
+      run: echo "${{ steps.convert_url_domain3.outputs.ssEndpoint_domain3 }}"
+   
+
+    - name: Cloudflare - Frontend DNS 3
+      continue-on-error: true
+      uses: rez0n/create-dns-record@v2.2
+      with:
+        type: "CNAME"
+        name: ${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}
+        content: ${{ steps.convert_url_domain3.outputs.ssEndpoint_domain3 }}
+        ttl: 1
+        proxied: true
+        token: ${{ secrets.CLOUDFLARE_TOKEN }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE3 }}
+
+    
+    - name: Cloudflare - Frontend DNS Verify 3
+      continue-on-error: true
+      uses: rez0n/create-dns-record@v2.2
+      with:
+        type: "CNAME"
+        name: asverify.${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}
+        content: asverify.${{ steps.convert_url_domain3.outputs.ssEndpoint_domain3 }}
+        ttl: 1
+        proxied: false
+        token: ${{ secrets.CLOUDFLARE_TOKEN }}
+        zone: ${{ secrets.CLOUDFLARE_ZONE3 }}
+    ### static site #3 - End
     - name: DNS Propagation Sleeper
-      run: sleep 90s
+      run: sleep 60s
 
+    ### static site #1 - custom domain
     - name: Enable Storage Account Frontend Cloudflare Custom Domain 
       uses: azure/CLI@v1
       with:
         inlineScript: |
             az storage account update --name ${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa --resource-group ${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg --custom-domain ${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone}} --use-subdomain true
 
+    ### static site #2 - custom domain
+    - name: Enable Storage Account Frontend Cloudflare Custom Domain2
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+            az storage account update --name ${{env.stackLocationCode}}${{env.AppName}}2${{env.stackEnvironment}}${{env.stackVersion}}sa --resource-group ${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg --custom-domain ${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone2}} --use-subdomain true
+
+    ### static site #3 - custom domain
+    - name: Enable Storage Account Frontend Cloudflare Custom Domain2
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+            az storage account update --name ${{env.stackLocationCode}}${{env.AppName}}3${{env.stackEnvironment}}${{env.stackVersion}}sa --resource-group ${{env.stackLocationCode}}-${{env.AppName}}-fe-${{env.stackEnvironment}}-${{env.stackVersion}}-rg --custom-domain ${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}.${{env.dnsZone3}} --use-subdomain true
 
   buildDeployDevelopmentBackend:
     # needs: deployDevelopmentIac
@@ -270,3 +393,5 @@ jobs:
       with:
         inlineScript: |
             az storage blob upload-batch --account-name ${{env.stackLocationCode}}${{env.AppName}}${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode key -d '$web' -s frontend/ --overwrite
+            az storage blob upload-batch --account-name ${{env.stackLocationCode}}${{env.AppName}}2${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode key -d '$web' -s frontend/ --overwrite
+            az storage blob upload-batch --account-name ${{env.stackLocationCode}}${{env.AppName}}3${{env.stackEnvironment}}${{env.stackVersion}}sa --auth-mode key -d '$web' -s frontend/ --overwrite
