disable az frontdoor stack type

--- a/.github/workflows/dev-full-stack-azureCDN.yml
+++ b/.github/workflows/dev-full-stack-azureCDN.yml
@@ -3,7 +3,7 @@ name: Development Full Stack Azure CDN
 on:
   push:
     branches:
-    - develop
+    - disabled
     paths:
     - '.github/workflows/dev-full-stack-azureCDN.yml'
     - '.iac/**'
