--- a/.github/workflows/dev-full-stack-cloudflare.yml
+++ b/.github/workflows/dev-full-stack-cloudflare.yml
@@ -14,11 +14,11 @@ env:
   dnsZone: 'ryanmcvey.me'
   dnsZone2: 'ryanmcvey.net'
   dnsZone3: 'ryanmcvey.cloud'
-  stackVersion: 'v1'
+  stackVersion: 'v66'
   stackEnvironment: 'dev'
   stackLocation: 'eastus'
   stackLocationCode: 'cus1'
-  AppName: 'resume'
+  AppName: 'bevis'
   AppBackendName: 'resumectr'
   tagCostCenter: 'azCF'
   rgDns: 'glbl-ryanmcveyme-v1-rg'
